# GenrativeAI_E2EObservability

./: .env.example  .gitignore  README.md  pyproject.toml
config/: milvus-standalone-docker-compose.yml
core/: embedding.py  llm.py  milvus_manager.py  prompts.py  rag.py
utils/: ingest_pdf_to_milvus.py  pdf_processor.py
